# autobackup

./: .dockerignore  .env.example  .gitignore  COS文档.md  README.md  docker-compose.yml  需求文档.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py  routes_admin.py  routes_auth.py  routes_backup.py  routes_cos.py  routes_logs.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  entities.py
backend/app/repositories/: admin.py  backup.py  cos.py  logs.py
backend/app/schemas/: admin.py  auth.py  backup.py  common.py  cos.py  logs.py
backend/app/services/: auth_service.py  backup_service.py  cos_service.py  log_service.py
backend/app/workers/: __init__.py  scheduler.py
deploy/nginx/: default.conf
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: http.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/styles/: main.css
frontend/src/utils/: webauthn.js
frontend/src/views/: AdminView.vue  ArtifactsView.vue  BootstrapView.vue  BucketsView.vue  CredentialsView.vue  DashboardView.vue  LoginView.vue  LogsView.vue  RestoreView.vue  ShellLayout.vue  TasksView.vue
